--- a/src/main/resources/fxml/Connection.fxml
+++ b/src/main/resources/fxml/Connection.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="it.polimi.ingsw.client.view.gui.GUIInterface"
+            fx:controller="it.polimi.ingsw.client.view.gui.controller.ConnectionController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
