--- a/src/main/resources/fxml/StartMenu.fxml
+++ b/src/main/resources/fxml/StartMenu.fxml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="it.polimi.ingsw.client.view.gui.controller.StartMenuController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="anchorBG" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="477.0" prefWidth="477.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.view.gui.controller.StartMenuController">
+<children>
+    <ImageView fx:id="myImageView" fitHeight="477.0" fitWidth="629.0" pickOnBounds="true" preserveRatio="true">
+        <image>
+            <Image url="@../images/Elements/EriantysText.png" />
+        </image>
+    </ImageView>
+    <AnchorPane layoutX="135.0" layoutY="148.0" prefHeight="264.0" prefWidth="206.0">
+         <children>
+            <Button alignment="CENTER" layoutX="57.0" layoutY="26.0" mnemonicParsing="false" onAction="#switchToCreateGame" prefHeight="25.0" prefWidth="86.0" text="New Game" AnchorPane.bottomAnchor="216.0" AnchorPane.leftAnchor="57.0" AnchorPane.rightAnchor="57.0" AnchorPane.topAnchor="26.0">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Button alignment="CENTER" layoutX="57.0" layoutY="77.0" mnemonicParsing="false" onAction="#switchToJoinGame" prefHeight="25.0" prefWidth="92.0" text="Join Game" AnchorPane.bottomAnchor="165.0" AnchorPane.topAnchor="77.0">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Button layoutX="57.0" layoutY="128.0" mnemonicParsing="false" onAction="#switchToLobby" prefHeight="25.0" prefWidth="92.0" text="Refresh">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Button layoutX="57.0" layoutY="179.0" mnemonicParsing="false" onAction="#switchToConnection" prefHeight="25.0" prefWidth="92.0" text="Logout">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+         </children></AnchorPane>
+</children>
 </AnchorPane>
