--- a/src/main/resources/fxml/GameCreation.fxml
+++ b/src/main/resources/fxml/GameCreation.fxml
@@ -17,21 +17,32 @@
                 <Image url="@../images/Elements/EriantysText.png" />
             </image>
         </ImageView>
-        <AnchorPane fx:id="anchorTextButton" layoutX="131.0" layoutY="152.0" prefHeight="236.0" prefWidth="215.0" AnchorPane.bottomAnchor="89.0" AnchorPane.leftAnchor="131.0" AnchorPane.rightAnchor="131.0" AnchorPane.topAnchor="152.0">
+        <AnchorPane fx:id="anchorText" layoutX="131.0" layoutY="151.0" prefHeight="237.0" prefWidth="215.0" AnchorPane.bottomAnchor="89.0" AnchorPane.leftAnchor="131.0" AnchorPane.rightAnchor="131.0" AnchorPane.topAnchor="151.0">
             <opaqueInsets>
                 <Insets />
             </opaqueInsets>
          <children>
-                <Button fx:id="continueButton" layoutX="75.0" layoutY="183.0" mnemonicParsing="false" onAction="#switchToGameBoardScene" text="Continue" />
-            <CheckBox layoutX="58.0" layoutY="146.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="100.0" text="Private game" />
-            <CheckBox layoutX="58.0" layoutY="110.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="100.0" text="Expert  game" />
-            <Spinner fx:id="mySpinner" layoutX="59.0" layoutY="66.0" prefHeight="25.0" prefWidth="94.0" />
-            <Label alignment="CENTER" layoutX="-3.0" layoutY="45.0" prefHeight="17.0" prefWidth="221.0" text="Players number:" />
-            <Label alignment="CENTER" layoutX="2.0" layoutY="14.0" prefHeight="17.0" prefWidth="215.0" text="New Game">
+                <Button fx:id="continueButton" layoutX="75.0" layoutY="171.0" mnemonicParsing="false" onAction="#generateRoomID" text="Continue" />
+            <CheckBox fx:id="checkPrivate" layoutX="58.0" layoutY="134.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="100.0" text="Private game" />
+            <CheckBox fx:id="checkExpert" layoutX="58.0" layoutY="98.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="100.0" text="Expert  game" />
+            <Spinner fx:id="mySpinner" layoutX="59.0" layoutY="54.0" prefHeight="25.0" prefWidth="94.0" />
+            <Label alignment="CENTER" layoutX="-3.0" layoutY="33.0" prefHeight="17.0" prefWidth="221.0" text="Players number:" />
+            <Label alignment="CENTER" layoutX="2.0" layoutY="2.0" prefHeight="17.0" prefWidth="215.0" text="New Game">
                <font>
                   <Font size="21.0" />
                </font>
             </Label>
+            <Label fx:id="yourRoomID" layoutX="52.0" layoutY="14.0" text="Your Room ID:" visible="false">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label fx:id="RoomID" layoutX="87.0" layoutY="53.0" text="0000" visible="false">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Button fx:id="continueButton1" layoutX="75.0" layoutY="171.0" mnemonicParsing="false" onAction="#switchToJoinGame" text="Continue" visible="false" />
          </children>
         </AnchorPane>
     </children>
