--- a/src/main/resources/fxml/StartMenu.fxml
+++ b/src/main/resources/fxml/StartMenu.fxml
@@ -15,19 +15,19 @@
     </ImageView>
     <AnchorPane layoutX="135.0" layoutY="148.0" prefHeight="264.0" prefWidth="206.0">
          <children>
-            <Button alignment="CENTER" layoutX="57.0" layoutY="26.0" mnemonicParsing="false" onAction="#switchToCreateGame" prefHeight="25.0" prefWidth="86.0" text="New Game" AnchorPane.bottomAnchor="216.0" AnchorPane.leftAnchor="57.0" AnchorPane.rightAnchor="57.0" AnchorPane.topAnchor="26.0">
+            <Button alignment="CENTER" layoutX="49.0" layoutY="25.0" mnemonicParsing="false" onAction="#switchToCreateGame" prefHeight="30.0" prefWidth="108.0" text="New Game" AnchorPane.bottomAnchor="217.0" AnchorPane.leftAnchor="49.0" AnchorPane.rightAnchor="49.0" AnchorPane.topAnchor="25.0">
                <font>
                   <Font size="14.0" />
                </font></Button>
-            <Button alignment="CENTER" layoutX="57.0" layoutY="77.0" mnemonicParsing="false" onAction="#switchToJoinGame" prefHeight="25.0" prefWidth="92.0" text="Join Game" AnchorPane.bottomAnchor="165.0" AnchorPane.topAnchor="77.0">
+            <Button alignment="CENTER" layoutX="49.0" layoutY="77.0" mnemonicParsing="false" onAction="#switchToJoinGame" prefHeight="30.0" prefWidth="108.0" text="Join Game" AnchorPane.bottomAnchor="165.0" AnchorPane.topAnchor="77.0">
                <font>
                   <Font size="14.0" />
                </font></Button>
-            <Button layoutX="57.0" layoutY="128.0" mnemonicParsing="false" onAction="#switchToLobby" prefHeight="25.0" prefWidth="92.0" text="Refresh">
+            <Button layoutX="49.0" layoutY="128.0" mnemonicParsing="false" onAction="#switchToFilterSearch" prefHeight="30.0" prefWidth="108.0" text="Public Rooms">
                <font>
                   <Font size="14.0" />
                </font></Button>
-            <Button layoutX="57.0" layoutY="179.0" mnemonicParsing="false" onAction="#switchToConnection" prefHeight="25.0" prefWidth="92.0" text="Logout">
+            <Button layoutX="49.0" layoutY="179.0" mnemonicParsing="false" onAction="#switchToConnection" prefHeight="30.0" prefWidth="108.0" text="Logout">
                <font>
                   <Font size="14.0" />
                </font></Button>
