--- a/src/main/resources/fxml/GameCreation.fxml
+++ b/src/main/resources/fxml/GameCreation.fxml
@@ -26,8 +26,8 @@
             <CheckBox fx:id="checkPrivate" layoutX="58.0" layoutY="134.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="100.0" text="Private game" />
             <CheckBox fx:id="checkExpert" layoutX="58.0" layoutY="98.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="100.0" text="Expert  game" />
             <Spinner fx:id="mySpinner" layoutX="59.0" layoutY="54.0" prefHeight="25.0" prefWidth="94.0" />
-            <Label alignment="CENTER" layoutX="-3.0" layoutY="33.0" prefHeight="17.0" prefWidth="221.0" text="Players number:" />
-            <Label alignment="CENTER" layoutX="2.0" layoutY="2.0" prefHeight="17.0" prefWidth="215.0" text="New Game">
+            <Label fx:id="playersNumberLabel" alignment="CENTER" layoutX="-3.0" layoutY="33.0" prefHeight="17.0" prefWidth="221.0" text="Players number:" />
+            <Label fx:id="newGameLabel" alignment="CENTER" layoutX="2.0" layoutY="2.0" prefHeight="17.0" prefWidth="215.0" text="New Game">
                <font>
                   <Font size="21.0" />
                </font>
