--- a/src/main/resources/fxml/FilterSearch.fxml
+++ b/src/main/resources/fxml/FilterSearch.fxml
@@ -22,7 +22,7 @@
                 <Insets />
             </opaqueInsets>
             <children>
-                <Button fx:id="continueButton" layoutX="75.0" layoutY="171.0" mnemonicParsing="false" onAction="#switchToLobby" text="Continue" />
+                <Button fx:id="continueButton" layoutX="26.0" layoutY="171.0" mnemonicParsing="false" onAction="#switchToLobby" text="Continue" />
                 <CheckBox fx:id="checkExpert" layoutX="58.0" layoutY="98.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="100.0" text="Expert  game" />
                 <Spinner fx:id="mySpinner" layoutX="59.0" layoutY="54.0" prefHeight="25.0" prefWidth="94.0" />
                 <Label alignment="CENTER" layoutX="-3.0" layoutY="33.0" prefHeight="17.0" prefWidth="221.0" text="Players number:" />
@@ -31,6 +31,7 @@
                         <Font size="21.0" />
                     </font>
                 </Label>
+            <Button fx:id="noFiltersButton" layoutX="126.0" layoutY="171.0" mnemonicParsing="false" onAction="#switchToLobbyNoFilters" text="No Filters" />
             </children>
         </AnchorPane>
     </children>
