updated access to Room in all controllers and started working on showing the board when the game is starting

--- a/src/main/resources/fxml/GameCreation.fxml
+++ b/src/main/resources/fxml/GameCreation.fxml
@@ -32,6 +32,7 @@
                   <Font size="21.0" />
                </font>
             </Label>
+            <Label fx:id="errorAccessRoom" alignment="CENTER" layoutX="-1.0" layoutY="206.0" prefHeight="17.0" prefWidth="215.0" text="Label" visible="false" />
          </children>
         </AnchorPane>
     </children>
