--- a/src/main/resources/fxml/Lobby.fxml
+++ b/src/main/resources/fxml/Lobby.fxml
@@ -18,7 +18,7 @@
       <AnchorPane layoutX="139.0" layoutY="156.0" prefHeight="227.0" prefWidth="200.0">
          <children>
             <ListView fx:id="roomInfoListView" layoutY="30.0" prefHeight="151.0" prefWidth="200.0" />
-            <Button fx:id="enterGame" layoutX="78.0" layoutY="190.0" mnemonicParsing="false" text="Enter" />
+            <Button fx:id="enterGame" layoutX="78.0" layoutY="190.0" mnemonicParsing="false" onAction="#enterGame" text="Enter" />
             <Label fx:id="myPublicRoomsLabel" alignment="CENTER" layoutY="3.0" prefHeight="17.0" prefWidth="200.0" text="Public Rooms" textAlignment="CENTER">
                <font>
                   <Font size="14.0" />
