--- a/src/main/resources/fxml/UpdatedGameBoard.fxml
+++ b/src/main/resources/fxml/UpdatedGameBoard.fxml
@@ -15,7 +15,7 @@
       </ImageView>
       <AnchorPane fx:id="ISLANDS" layoutX="288.0" layoutY="5.0">
          <children>
-            <AnchorPane fx:id="ISLAND_0" layoutX="116.0" layoutY="27.0" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_0" layoutX="116.0" layoutY="27.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
                <children>
                   <ImageView fx:id="islandIndex0" fitHeight="150.0" fitWidth="150.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -99,7 +99,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_1" layoutX="259.0" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_1" layoutX="259.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
                <children>
                   <ImageView fx:id="islandIndex1" fitHeight="150.0" fitWidth="150.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -131,7 +131,7 @@
                         <Image url="@../images/Elements/RoundBlue.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="MOTHERNATURE1" fitHeight="50.0" fitWidth="50.0" layoutX="53.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                  <ImageView fx:id="MOTHERNATURE1" fitHeight="50.0" fitWidth="50.0" layoutX="53.0" layoutY="45.0" onDragDetected="#startDrag" onDragDone="#dragDone" pickOnBounds="true" preserveRatio="true" visible="false">
                      <image>
                         <Image url="@../images/Elements/MotherNature.png" />
                      </image>
@@ -183,7 +183,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_2" layoutX="395.0" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_2" layoutX="395.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
                <children>
                   <ImageView fx:id="islandIndex2" fitHeight="150.0" fitWidth="150.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -215,7 +215,7 @@
                         <Image url="@../images/Elements/RoundBlue.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="MOTHERNATURE2" fitHeight="50.0" fitWidth="50.0" layoutX="47.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                  <ImageView fx:id="MOTHERNATURE2" fitHeight="50.0" fitWidth="50.0" layoutX="47.0" layoutY="45.0" onDragDetected="#startDrag" onDragDone="#dragDone" pickOnBounds="true" preserveRatio="true" visible="false">
                      <image>
                         <Image url="@../images/Elements/MotherNature.png" />
                      </image>
@@ -267,7 +267,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_3" layoutX="537.0" layoutY="27.0" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_3" layoutX="537.0" layoutY="27.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
                <children>
                   <ImageView fx:id="islandIndex3" fitHeight="150.0" fitWidth="150.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -299,7 +299,7 @@
                         <Image url="@../images/Elements/RoundBlue.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="MOTHERNATURE3" fitHeight="50.0" fitWidth="50.0" layoutX="47.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                  <ImageView fx:id="MOTHERNATURE3" fitHeight="50.0" fitWidth="50.0" layoutX="47.0" layoutY="45.0" onDragDetected="#startDrag" onDragDone="#dragDone" pickOnBounds="true" preserveRatio="true" visible="false">
                      <image>
                         <Image url="@../images/Elements/MotherNature.png" />
                      </image>
@@ -351,7 +351,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_4" layoutX="654.0" layoutY="130.0" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_4" layoutX="654.0" layoutY="130.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#evitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
                <children>
                   <ImageView fx:id="islandIndex4" fitHeight="150.0" fitWidth="150.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -383,7 +383,7 @@
                         <Image url="@../images/Elements/RoundBlue.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="MOTHERNATURE4" fitHeight="50.0" fitWidth="50.0" layoutX="54.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                  <ImageView fx:id="MOTHERNATURE4" fitHeight="50.0" fitWidth="50.0" layoutX="54.0" layoutY="45.0" onDragDetected="#startDrag" onDragDone="#dragDone" pickOnBounds="true" preserveRatio="true" visible="false">
                      <image>
                         <Image url="@../images/Elements/MotherNature.png" />
                      </image>
@@ -435,7 +435,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_5" layoutX="661.0" layoutY="255.0" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_5" layoutX="661.0" layoutY="255.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
                <children>
                   <ImageView fx:id="islandIndex5" fitHeight="150.0" fitWidth="150.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -467,7 +467,7 @@
                         <Image url="@../images/Elements/RoundBlue.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="MOTHERNATURE5" fitHeight="50.0" fitWidth="50.0" layoutX="44.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                  <ImageView fx:id="MOTHERNATURE5" fitHeight="50.0" fitWidth="50.0" layoutX="44.0" layoutY="45.0" onDragDetected="#startDrag" onDragDone="#dragDone" pickOnBounds="true" preserveRatio="true" visible="false">
                      <image>
                         <Image url="@../images/Elements/MotherNature.png" />
                      </image>
@@ -519,7 +519,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_6" layoutX="534.0" layoutY="338.0" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_6" layoutX="534.0" layoutY="338.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
                <children>
                   <ImageView fx:id="islandIndex6" fitHeight="150.0" fitWidth="150.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -551,7 +551,7 @@
                         <Image url="@../images/Elements/RoundBlue.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="MOTHERNATURE6" fitHeight="50.0" fitWidth="50.0" layoutX="50.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                  <ImageView fx:id="MOTHERNATURE6" fitHeight="50.0" fitWidth="50.0" layoutX="50.0" layoutY="45.0" onDragDetected="#startDrag" onDragDone="#dragDone" pickOnBounds="true" preserveRatio="true" visible="false">
                      <image>
                         <Image url="@../images/Elements/MotherNature.png" />
                      </image>
@@ -635,7 +635,7 @@
                         <Image url="@../images/Elements/RoundBlue.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="MOTHERNATURE7" fitHeight="50.0" fitWidth="50.0" layoutX="52.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                  <ImageView fx:id="MOTHERNATURE7" fitHeight="50.0" fitWidth="50.0" layoutX="52.0" layoutY="45.0" onDragDetected="#startDrag" onDragDone="#dragDone" pickOnBounds="true" preserveRatio="true" visible="false">
                      <image>
                         <Image url="@../images/Elements/MotherNature.png" />
                      </image>
@@ -719,7 +719,7 @@
                         <Image url="@../images/Elements/RoundBlue.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="MOTHERNATURE8" fitHeight="50.0" fitWidth="50.0" layoutX="42.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                  <ImageView fx:id="MOTHERNATURE8" fitHeight="50.0" fitWidth="50.0" layoutX="42.0" layoutY="45.0" onDragDetected="#startDrag" onDragDone="#dragDone" pickOnBounds="true" preserveRatio="true" visible="false">
                      <image>
                         <Image url="@../images/Elements/MotherNature.png" />
                      </image>
@@ -803,7 +803,7 @@
                         <Image url="@../images/Elements/RoundBlue.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="MOTHERNATURE9" fitHeight="50.0" fitWidth="50.0" layoutX="48.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                  <ImageView fx:id="MOTHERNATURE9" fitHeight="50.0" fitWidth="50.0" layoutX="48.0" layoutY="45.0" onDragDetected="#startDrag" onDragDone="#dragDone" pickOnBounds="true" preserveRatio="true" visible="false">
                      <image>
                         <Image url="@../images/Elements/MotherNature.png" />
                      </image>
@@ -887,7 +887,7 @@
                         <Image url="@../images/Elements/RoundBlue.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="MOTHERNATURE10" fitHeight="50.0" fitWidth="50.0" layoutX="50.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                  <ImageView fx:id="MOTHERNATURE10" fitHeight="50.0" fitWidth="50.0" layoutX="50.0" layoutY="45.0" onDragDetected="#startDrag" onDragDone="#dragDone" pickOnBounds="true" preserveRatio="true" visible="false">
                      <image>
                         <Image url="@../images/Elements/MotherNature.png" />
                      </image>
@@ -971,7 +971,7 @@
                         <Image url="@../images/Elements/RoundBlue.png" />
                      </image>
                   </ImageView>
-                  <ImageView fx:id="MOTHERNATURE11" fitHeight="50.0" fitWidth="50.0" layoutX="44.0" layoutY="45.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                  <ImageView fx:id="MOTHERNATURE11" fitHeight="50.0" fitWidth="50.0" layoutX="44.0" layoutY="45.0" onDragDetected="#startDrag" onDragDone="#dragDone" pickOnBounds="true" preserveRatio="true" visible="false">
                      <image>
                         <Image url="@../images/Elements/MotherNature.png" />
                      </image>
