--- a/src/main/resources/fxml/UpdatedGameBoard.fxml
+++ b/src/main/resources/fxml/UpdatedGameBoard.fxml
@@ -351,7 +351,7 @@
                   </Label>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="ISLAND_4" layoutX="654.0" layoutY="130.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#evitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
+            <AnchorPane fx:id="ISLAND_4" layoutX="654.0" layoutY="130.0" onDragDropped="#dragDrop" onDragEntered="#hover" onDragExited="#exitHover" onDragOver="#dragOver" onMouseClicked="#destinationIsland">
                <children>
                   <ImageView fx:id="islandIndex4" fitHeight="150.0" fitWidth="150.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                      <image>
