--- a/src/main/resources/fxml/UpdatedGameBoard.fxml
+++ b/src/main/resources/fxml/UpdatedGameBoard.fxml
@@ -1457,51 +1457,15 @@
             </AnchorPane>
             <AnchorPane fx:id="ENTRANCE" layoutX="15.0" layoutY="26.0">
                <children>
-                  <ImageView fx:id="E_STUDENT_8" fitHeight="30.0" fitWidth="30.0" layoutX="31.0" layoutY="156.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false">
-                     <image>
-                        <Image url="@../images/Elements/RoundYellow.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="E_STUDENT_7" fitHeight="30.0" fitWidth="30.0" layoutY="156.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false">
-                     <image>
-                        <Image url="@../images/Elements/RoundYellow.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="E_STUDENT_6" fitHeight="30.0" fitWidth="30.0" layoutX="31.0" layoutY="118.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false">
-                     <image>
-                        <Image url="@../images/Elements/RoundYellow.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="E_STUDENT_5" fitHeight="30.0" fitWidth="30.0" layoutY="118.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false">
-                     <image>
-                        <Image url="@../images/Elements/RoundYellow.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="E_STUDENT_3" fitHeight="30.0" fitWidth="30.0" layoutY="79.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false">
-                     <image>
-                        <Image url="@../images/Elements/RoundYellow.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="E_STUDENT_4" fitHeight="30.0" fitWidth="30.0" layoutX="31.0" layoutY="81.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false">
-                     <image>
-                        <Image url="@../images/Elements/RoundYellow.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="E_STUDENT_2" fitHeight="30.0" fitWidth="30.0" layoutX="31.0" layoutY="39.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false">
-                     <image>
-                        <Image url="@../images/Elements/RoundYellow.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="E_STUDENT_1" fitHeight="30.0" fitWidth="30.0" layoutY="39.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false">
-                     <image>
-                        <Image url="@../images/Elements/RoundYellow.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fx:id="E_STUDENT_0" fitHeight="30.0" fitWidth="30.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false">
-                     <image>
-                        <Image url="@../images/Elements/RoundYellow.png" />
-                     </image>
-                  </ImageView>
+                  <ImageView fx:id="E_STUDENT_8" fitHeight="30.0" fitWidth="30.0" layoutX="31.0" layoutY="156.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <ImageView fx:id="E_STUDENT_7" fitHeight="30.0" fitWidth="30.0" layoutY="156.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <ImageView fx:id="E_STUDENT_6" fitHeight="30.0" fitWidth="30.0" layoutX="31.0" layoutY="118.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <ImageView fx:id="E_STUDENT_5" fitHeight="30.0" fitWidth="30.0" layoutY="118.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <ImageView fx:id="E_STUDENT_3" fitHeight="30.0" fitWidth="30.0" layoutY="79.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <ImageView fx:id="E_STUDENT_4" fitHeight="30.0" fitWidth="30.0" layoutX="31.0" layoutY="81.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <ImageView fx:id="E_STUDENT_2" fitHeight="30.0" fitWidth="30.0" layoutX="31.0" layoutY="39.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <ImageView fx:id="E_STUDENT_1" fitHeight="30.0" fitWidth="30.0" layoutY="39.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <ImageView fx:id="E_STUDENT_0" fitHeight="30.0" fitWidth="30.0" onDragDetected="#startDrag" onDragDone="#dragDone" onMouseClicked="#studentSelected" pickOnBounds="true" preserveRatio="true" visible="false" />
                </children>
             </AnchorPane>
             <AnchorPane fx:id="TOWERS" layoutX="444.0" layoutY="26.0">
@@ -1579,7 +1543,7 @@
             <Image url="@../images/Elements/Coin.png" />
          </image>
       </ImageView>
-      <Label fx:id="OWNEDCOINS" alignment="CENTER" contentDisplay="CENTER" layoutX="976.0" layoutY="740.0" text="Label" />
+      <Label fx:id="OWNEDCOINS" alignment="CENTER" contentDisplay="CENTER" layoutX="976.0" layoutY="740.0" prefHeight="17.0" prefWidth="30.0" text="0" />
       <AnchorPane fx:id="CHARACTERCARDS" layoutX="1017.0" layoutY="401.0" prefHeight="335.0" prefWidth="326.0">
          <children>
             <ImageView fx:id="CC1" fitHeight="150.0" fitWidth="150.0" layoutX="83.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
@@ -1701,5 +1665,6 @@
             </AnchorPane>
          </children>
       </AnchorPane>
+      <Label fx:id="MESSAGES" alignment="CENTER" layoutX="46.0" layoutY="329.0" prefHeight="17.0" prefWidth="165.0" text="MEX" visible="false" />
    </children>
 </AnchorPane>
