--- a/src/main/resources/fxml/CharacterCards.fxml
+++ b/src/main/resources/fxml/CharacterCards.fxml
@@ -14,11 +14,7 @@
             <Image url="@../images/Elements/CCbg.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="DescCC" fitHeight="303.0" fitWidth="200.0" layoutX="223.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/Personaggi/DescCC0.png" />
-         </image>
-      </ImageView>
+      <ImageView fx:id="DescCC" fitHeight="303.0" fitWidth="200.0" layoutX="223.0" layoutY="233.0" pickOnBounds="true" preserveRatio="true" />
       <Label fx:id="DESCRIPTIONCC" alignment="TOP_CENTER" contentDisplay="TOP" layoutX="446.0" layoutY="233.0" prefHeight="165.0" prefWidth="710.0" text="Description">
          <font>
             <Font size="20.0" />
